# eras_opera

./: .clinerules  .gitignore  .vc-installed-files  DEPLOYMENT.md  Dockerfile  README.md  chart1.json  chart2.json  chart3.json  debug.py  debug2.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  query_db.py  test_output.txt
.claude/: launch.json
dashboard/: .dockerignore  Dockerfile  app.py  requirements.txt
dashboard_v2/: .env.prod.example  app.py  requirements.txt
docs/: Eras_PowerBI_Report_requirement.docx  Nor1 Integrated Upsell API (24.4.0.0).json  OPERA Cloud API for Customer Management Service (26.2.0.0).json  OPERA Cloud Accounts Receivables API (26.2.0.0).json  OPERA Cloud Activity API (26.2.0.0).json  OPERA Cloud Activity Management API (26.2.0.0).json  OPERA Cloud Back Office Operations API (26.2.0.0).json  OPERA Cloud Block API (26.2.0.0).json  OPERA Cloud Block Configuration API (26.2.0.0).json  OPERA Cloud Block Reservation Asynchronous API (26.2.0.0).json  OPERA Cloud CRM Asynchronous API (26.2.0.0).json  OPERA Cloud CRM Configuration API (26.2.0.0).json  OPERA Cloud Cashiering API (26.2.0.0).json  (+29 more)
extractor/: .env.prod.example  Dockerfile  check_tc.py  pyproject.toml
extractor/src/: client.py  config.py  database.py  main.py  models.py
extractor/src/extractors/: cashiering.py  hotel_config.py  reservations.py
extractor/tests/: conftest.py  test_cashiering_database.py  test_cashiering_extractor.py  test_client.py  test_database.py  test_hotel_config_database.py  test_hotel_config_extractor.py  test_main_wiring.py
(+162 files in other folders)
